<resources>
    <string name="app_name">Chat</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Ascena</string>
    <string name="nav_header_subtitle">info@ascenaretail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_cart">Cart</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_share">Share</string>

    <string name="menu_camera">Camera</string>
    <string name="menu_3d">3D view</string>
    <string name="Chat_Bot">Chat</string>
    <string name="title_activity_chat">ChatActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_image">ImageActivity</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="title_activity_chat_message">ChatMessage</string>
    <string name="title_activity_chat_message_adapter">ChatMessageAdapter</string>
</resources>
