<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_cart"
            android:title="@string/menu_cart" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/menu_share" />
    </group>

    <item android:title="Real time Experience">
        <menu>
            <item
                android:id="@+id/nav_camera"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_camera" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_3d_rotation"
                android:title="@string/menu_3d" />
            <item
                android:id="@+id/nav_chat"
                android:icon="@drawable/ic_chat"
                android:title="@string/Chat_Bot" />
        </menu>
    </item>

</menu>
